<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:background="@color/colorPrimary"
        android:gravity="center|center_vertical"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/txt_header"
        android:id="@+id/tv_forgot_password"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_20sp"
        android:text="@string/forgot_password"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_forgot_password"
        android:layout_marginEnd="@dimen/_30dp"
        android:id="@+id/tv_enter_your_email"
        android:textSize="@dimen/_15sp"
        android:maxLines="2"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/enter_your_email"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55dp"
        android:layout_marginLeft="@dimen/_5dp"
        android:layout_marginRight="@dimen/_5dp"
        android:layout_below="@id/tv_enter_your_email"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:background="@android:color/transparent"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/_5dp"
        android:textColorHint="@android:color/black"
        android:textSize="@dimen/_18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_below="@+id/edit_email"
        android:layout_marginLeft="@dimen/_5dp"
        android:layout_marginRight="@dimen/_5dp"
        android:id="@+id/view"
        android:background="@color/dark_gray" />

    <TextView
        android:id="@+id/txt_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/_60dp"
        android:layout_marginBottom="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_15dp"
        android:layout_marginLeft="@dimen/_15dp"
        android:layout_marginRight="@dimen/_15dp"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginTop="@dimen/_30dp"
        android:background="@drawable/red_corners"
        android:gravity="center"
        android:layout_below="@+id/view"
        android:text="@string/reset_password"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_17sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_below="@+id/txt_reset_password"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_16sp"
            android:textColor="@color/blackColor"
            android:text="@string/return_to"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_18sp"
            android:id="@+id/tv_login"
            android:layout_marginStart="@dimen/_8dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/login"/>

    </LinearLayout>

</RelativeLayout>
