<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/footer"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_5dp"
        android:weightSum="@integer/integer_four">

        <LinearLayout
            android:id="@+id/ll_careers"
            android:layout_width="@dimen/_0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/integer_one"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_careers_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/careers_icon"
                android:textColor="@color/blackColor"
                android:textSize="@dimen/_30sp" />


            <TextView
                android:id="@+id/txt_careers"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20dp"
                android:gravity="center"
                android:text="@string/update"
                android:textColor="@color/blackColor"
                android:textSize="@dimen/_12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ask_help_footer"
            android:layout_width="@dimen/_0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/integer_one"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_askforhelp_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/askforhelp_icon"
                android:gravity="center"
                android:textColor="@color/blackColor"
                android:textSize="@dimen/_30sp" />

            <TextView
                android:id="@+id/txt_askforhelp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20dp"
                android:gravity="center"
                android:text="@string/services"
                android:textColor="@color/blackColor"
                android:textSize="@dimen/_12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_financial_aid"
            android:layout_width="@dimen/_0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/integer_one"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_financial_aid_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/financial_aid_icon"
                android:textColor="@color/blackColor"
                android:textSize="@dimen/_30sp" />

            <TextView
                android:id="@+id/txt_financial_aid"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20dp"
                android:gravity="center"
                android:text="DISCUSSIONS"
                android:textColor="@color/blackColor"
                android:textSize="@dimen/_12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_forum"
            android:layout_width="@dimen/_0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/integer_one"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_our_forum_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/our_forum_icon"
                android:gravity="center"
                android:textColor="@color/blackColor"
                android:textSize="@dimen/_30sp" />

            <TextView
                android:id="@+id/txt_our_forum"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20dp"
                android:gravity="center"
                android:text="@string/members"
                android:textColor="@color/blackColor"
                android:textSize="@dimen/_12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>