<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/moderators_bg_color"
    android:orientation="vertical"
    android:padding="@dimen/_10dp">

    <ImageView
        android:id="@+id/img_moderators"
        android:layout_width="@dimen/_250dp"
        android:layout_height="@dimen/_250dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/_15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/avatar_image" />

    <TextView
        android:id="@+id/txt_moderators"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:paddingEnd="@dimen/_5dp"
        android:paddingStart="@dimen/_5dp"
        android:text="@string/moderators"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_25sp" />

    <TextView
        android:id="@+id/txt_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/moderate_button_rectangle"
        android:gravity="center"
        android:minHeight="@dimen/_40dp"
        android:paddingStart="@dimen/_5dp"
        android:text="@string/email_hint"
        android:textColor="@color/moderators_email_color"
        android:textSize="@dimen/_20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15dp">

        <TextView
            android:id="@+id/tv_previous_icon"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/moderate_bg_circle"
            android:gravity="center"
            android:text="@string/moderate_keyboard_arrow_left"
            android:textColor="@color/moderators_count_color"
            android:textSize="@dimen/_20sp" />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/one"
            android:textColor="@color/moderators_count_color"
            android:textSize="@dimen/_20sp" />

        <TextView
            android:id="@+id/tv_next_icon"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/moderate_bg_circle"
            android:gravity="center"
            android:text="@string/moderate_keyboard_arrow_right"
            android:textColor="@color/moderators_count_color"
            android:textSize="@dimen/_20sp" />

    </RelativeLayout>

</LinearLayout>
